# trigobot-rs

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  finder.py  flake.nix  package.nix  state
.github/workflows/: rust.yml
proto/: broadcast.proto
src/: README.md  env.rs  events.rs  lib.rs  main.rs  model.rs
src/commands/: announce.rs  anunciar.rs  dump.rs  email.rs  mod.rs  rss.rs  say.rs  traps.rs  undo.rs
src/commands/management/: category.rs  mod.rs
src/commands/management/rss/: add.rs  import.rs  list.rs  mod.rs  mv.rs  rm.rs
src/commands/roles/: add.rs  clear.rs  mod.rs  rm.rs
src/model/: cache.rs  feed.rs  message.rs  mod.rs
src/network/: grpc.rs  mod.rs
