[package]
name = "trigobot"
version = "0.1.0"
authors = ["DMaxter <daniel_matos@outlook.pt>"]
edition = "2018"

[dependencies]
bincode    = "1.3"
chrono     = "0.4"
dotenv     = "0.15"
futures    = "0.3"
html2md    = "0.2"
md5        = "0.7"
prost      = "0.7"
rand       = "0.8"
regex      = "1"
reqwest    = { version = "0.11", features = ["rustls"] }
rss        = "1.10"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity   = { version = "0.10", default_features = false, features = ["cache", "client", "gateway", "model", "rustls_backend", "standard_framework"] }
tokio      = { version = "1.8", features = ["macros", "rt-multi-thread"] }
tonic      = "0.4"

[build-dependencies]
tonic-build = "0.4"
