[package]
name = "trigobot"
version = "0.1.0"
authors = ["DMaxter <daniel_matos@outlook.pt>"]
edition = "2018"

[dependencies]
bincode = "1"
chrono = "0.4"
dotenv = "0.15"
eyre = "0.6"
futures = "0.3"
html2md = "0.2"
lazy_static = "1"
md5 = "0.7"
notify = "4"
prost = "0.11"
rand = "0.8"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls"] }
rss = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0.10", default-features = false, features = ["cache", "client", "gateway", "model", "rustls_backend", "standard_framework"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.8"
